[package]
name = "leo-status"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leo-status-driver = { path = "../leo-status-driver" }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.141"
hidapi = "2.6.3"
clap = { version = "4.5.45", features = ["derive"] }
humantime = "2.2.0"
tiny_http = "0.12"
prometheus = "0.14.0"
